--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             <button class="button" id="btn-kick">
                 Thunder Jolt
             </button>
+            <button class="button" id="btn-fireball">
+                Fireball
+            </button>
         </div>
 
         <div class="pokemon enemy">
